# furniture-framework

./: FurnitureFramework.esp  brff_mapping.json
Meshes/BRFF/: firewoodpilelarge01.nif  floraleek01.nif  marker.nif  mineoreiron01.nif  noose.nif
SKSEPlugin/: CMakeLists.txt  plugin.cpp
Scripts/: BRFFActorEffectScript.pex  BRFFController.pex  BRFFPlayerRef.pex  BRFFSKSELibrary.pex  BRFFSpawnFurnEffectScript.pex
Source/Scripts/: BRFFActorEffectScript.psc  BRFFController.psc  BRFFPlayerRef.psc  BRFFSKSELibrary.psc  BRFFSpawnFurnEffectScript.psc
